2006-05-14 Borut Razem <borut.razem@siol.net>

	* src/makefile.mingw: added 16f87 and 16f88 processors
	* modules/makefile.mingw: added i2c-eeprom
	* src/p12x.cc: removed unused variable

2006-05-14 Roy Rankin <rrankin@ihug.com.au>
	* regression/a2d/p16f874a.asm, regression/a2d/p16c71.asm,
	  regression/a2d/16f871.lkr, regression/a2d/16f874a.lkr,
	  regression/a2d/p18f452.asm, regression/a2d/p16f88.asm,
	  regression/a2d/p16f871.asm, regression/a2d/Makefile,
	  regression/a2d/p16f873a.asm, regression/run_regression.sh,
	  src/p16f87x.cc, src/p16f87x.h, src/16bit-processors.cc,
	  src/p16f62x.cc, src/p16x7x.cc, src/p18x.cc, src/a2dconverter.cc:
	- tests and correction to a2d for various processors

2006-05-14 Roy Rankin <rrankin@ihug.com.au>
	* src/16bit-registers.h, src/14bit-registers.h, src/pic-processor.cc,
	  src/Makefile.am, src/pic-processor.h, src/14bit-registers.cc,
	  src/p16f8x.h, src/p16f8x.cc,
	  regression/a2d/Makefile, regression/run_regression.sh,
	  regression/a2d/16f88.lkr, regression/a2d/p16f88.asm:
	- Add 16f87 and 16f88 processors

2006-05-13 Scott Dattalo <scott@dattalo.com>
	* src/a2dconvert.h: removed redundant class qualifiers in member
	function declarations.
	
2006-05-13 Scott Dattalo <scott@dattalo.com>
	* src/processor.h, src/processor.cc, gui/gui_src_opcode.cc: Added
	romData[] accessor (analogous to ramData) to provide a way of
	querying and modifying the program memory. So now you can change
	program memory from the command line:
	gpsim> romData[address] = value
	Address and value can be symbols.

2006-05-12 Robert Pearce <rob@bdt-home.demon.co.uk>
	* regression/run_regression.sh, regression/txisr_test/...:
        Added a test for the correct behaviour of usart transmit interrupts

2006-05-11 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/p16f87x.cc: A2D converter fixes for the 16f871.

2006-05-10 Scott Dattalo <scott@dattalo.com>
	* src/pir.h, src/pir.cc: Applied patch (with modifications) from